@@ -1,32 +1,197 @@
 package kt.aivle.analytics.application.service;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.util.List;
 
 import com.google.api.services.youtube.YouTube;
 import com.google.api.services.youtube.model.ChannelListResponse;
 import com.google.api.services.youtube.model.ChannelStatistics;
+import com.google.api.services.youtube.model.CommentThreadListResponse;
 import com.google.api.services.youtube.model.VideoListResponse;
 import com.google.api.services.youtube.model.VideoStatistics;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import kt.aivle.analytics.adapter.in.web.dto.PostCommentsQueryResponse;
+import kt.aivle.analytics.adapter.in.web.dto.RealtimeAccountMetricsResponse;
+import kt.aivle.analytics.adapter.in.web.dto.RealtimePostMetricsResponse;
+import kt.aivle.analytics.application.port.out.SnsAccountRepositoryPort;
+import kt.aivle.analytics.application.port.out.SnsPostRepositoryPort;
+import kt.aivle.analytics.domain.entity.SnsAccount;
+import kt.aivle.analytics.domain.entity.SnsPost;
+import kt.aivle.analytics.exception.AnalyticsErrorCode;
 import kt.aivle.analytics.exception.AnalyticsException;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class YouTubeApiService {
     
     @Value("${app.youtube.api.key}")
     private String apiKey;
     
     private final YouTubeApiQuotaManager quotaManager;
+    private final SnsPostRepositoryPort snsPostRepositoryPort;
+    private final SnsAccountRepositoryPort snsAccountRepositoryPort;
+    private final AnalyticsCacheService cacheService;
     private YouTube youtubeClient;
     
-    public YouTubeApiService(YouTubeApiQuotaManager quotaManager) {
-        this.quotaManager = quotaManager;
+    /**
+     * 실시간 게시물 메트릭을 조회합니다.
+     */
+    public List<RealtimePostMetricsResponse> getRealtimePostMetrics(Long postId) {
+        // 캐시에서 먼저 확인
+        var cached = cacheService.getCachedRealtimePostMetrics(postId);
+        if (cached.isPresent()) {
+            log.debug("Returning cached realtime post metrics for postId: {}", postId);
+            return cached.get();
+        }
+        
+        try {
+            SnsPost post = snsPostRepositoryPort.findById(postId)
+                .orElseThrow(() -> new AnalyticsException(AnalyticsErrorCode.POST_NOT_FOUND, "Post not found: " + postId));
+            
+            VideoStatistics statistics = getVideoStatistics(post.getSnsPostId());
+            
+            if (statistics != null) {
+                RealtimePostMetricsResponse response = RealtimePostMetricsResponse.builder()
+                    .postId(postId)
+                    .snsPostId(post.getSnsPostId())
+                    .accountId(post.getAccountId())
+                    .likes(statistics.getLikeCount() != null ? statistics.getLikeCount().toString() : "0")
+                    .dislikes(statistics.getDislikeCount() != null ? statistics.getDislikeCount().longValue() : 0L)
+                    .comments(statistics.getCommentCount() != null ? statistics.getCommentCount().longValue() : 0L)
+                    .shares(null) // YouTube API v3에서는 공유 수를 직접 제공하지 않음
+                    .views(statistics.getViewCount() != null ? statistics.getViewCount().longValue() : 0L)
+                    .fetchedAt(LocalDateTime.now())
+                    .dataSource("youtube_api")
+                    .isCached(false)
+                    .build();
+                
+                List<RealtimePostMetricsResponse> result = List.of(response);
+                
+                // 캐시에 저장
+                cacheService.cacheRealtimePostMetrics(postId, result);
+                
+                return result;
+            }
+            
+            return List.of();
+            
+        } catch (AnalyticsException e) {
+            throw e;
+        } catch (Exception e) {
+            log.error("Error getting realtime post metrics for postId: {}", postId, e);
+            throw new AnalyticsException(AnalyticsErrorCode.YOUTUBE_API_ERROR, "Failed to get realtime post metrics", e);
+        }
+    }
+    
+    /**
+     * 실시간 계정 메트릭을 조회합니다.
+     */
+    public List<RealtimeAccountMetricsResponse> getRealtimeAccountMetrics(Long accountId) {
+        // 캐시에서 먼저 확인
+        var cached = cacheService.getCachedRealtimeAccountMetrics(accountId);
+        if (cached.isPresent()) {
+            log.debug("Returning cached realtime account metrics for accountId: {}", accountId);
+            return cached.get();
+        }
+        
+        try {
+            SnsAccount account = snsAccountRepositoryPort.findById(accountId)
+                .orElseThrow(() -> new AnalyticsException(AnalyticsErrorCode.ACCOUNT_NOT_FOUND, "Account not found: " + accountId));
+            
+            ChannelStatistics statistics = getChannelStatistics(account.getSnsAccountId());
+            
+            if (statistics != null) {
+                RealtimeAccountMetricsResponse response = RealtimeAccountMetricsResponse.builder()
+                    .accountId(accountId)
+                    .snsAccountId(account.getSnsAccountId())
+                    .followers(statistics.getSubscriberCount() != null ? statistics.getSubscriberCount().longValue() : 0L)
+                    .views(statistics.getViewCount() != null ? statistics.getViewCount().longValue() : 0L)
+                    .fetchedAt(LocalDateTime.now())
+                    .dataSource("youtube_api")
+                    .isCached(false)
+                    .build();
+                
+                List<RealtimeAccountMetricsResponse> result = List.of(response);
+                
+                // 캐시에 저장
+                cacheService.cacheRealtimeAccountMetrics(accountId, result);
+                
+                return result;
+            }
+            
+            return List.of();
+            
+        } catch (AnalyticsException e) {
+            throw e;
+        } catch (Exception e) {
+            log.error("Error getting realtime account metrics for accountId: {}", accountId, e);
+            throw new AnalyticsException(AnalyticsErrorCode.YOUTUBE_API_ERROR, "Failed to get realtime account metrics", e);
+        }
+    }
+    
+    /**
+     * 실시간 게시물 댓글을 조회합니다.
+     */
+    public List<PostCommentsQueryResponse> getRealtimePostComments(Long postId, Integer page, Integer size) {
+        // 캐시에서 먼저 확인
+        var cached = cacheService.getCachedRealtimePostComments(postId, page, size);
+        if (cached.isPresent()) {
+            log.debug("Returning cached realtime post comments for postId: {}, page: {}, size: {}", postId, page, size);
+            return cached.get();
+        }
+        
+        try {
+            SnsPost post = snsPostRepositoryPort.findById(postId)
+                .orElseThrow(() -> new AnalyticsException(AnalyticsErrorCode.POST_NOT_FOUND, "Post not found: " + postId));
+            
+            YouTube youtube = getYouTubeClient();
+            
+            CommentThreadListResponse response = youtube.commentThreads()
+                .list(List.of("snippet"))
+                .setVideoId(post.getSnsPostId())
+                .setMaxResults((long) size)
+                .setOrder("time") // 최신순 정렬
+                .setKey(apiKey)
+                .execute();
+                
+            quotaManager.incrementApiCall();
+            
+            if (response.getItems() != null) {
+                List<PostCommentsQueryResponse> result = response.getItems().stream()
+                    .map(commentThread -> {
+                        var comment = commentThread.getSnippet().getTopLevelComment();
+                        return PostCommentsQueryResponse.builder()
+                            .commentId(comment.getId())
+                            .authorName(comment.getSnippet().getAuthorDisplayName())
+                            .text(comment.getSnippet().getTextDisplay())
+                            .likeCount(comment.getSnippet().getLikeCount() != null ? comment.getSnippet().getLikeCount().longValue() : 0L)
+                            .publishedAt(LocalDateTime.now()) // 임시로 현재 시간 사용
+                            .crawledAt(LocalDateTime.now())
+                            .build();
+                    })
+                    .collect(java.util.stream.Collectors.toList());
+                
+                // 캐시에 저장
+                cacheService.cacheRealtimePostComments(postId, page, size, result);
+                
+                return result;
+            }
+            
+            return List.of();
+            
+        } catch (AnalyticsException e) {
+            throw e;
+        } catch (Exception e) {
+            log.error("Error getting realtime post comments for postId: {}", postId, e);
+            throw new AnalyticsException(AnalyticsErrorCode.YOUTUBE_API_ERROR, "Failed to get realtime post comments", e);
+        }
     }
     
     /**
@@ -37,8 +202,8 @@ public class YouTubeApiService {
             YouTube youtube = getYouTubeClient();
             
             ChannelListResponse response = youtube.channels()
-                .list(Arrays.asList("statistics"))
-                .setId(Arrays.asList(channelId))
+                .list(List.of("statistics"))
+                .setId(List.of(channelId))
                 .setKey(apiKey)
                 .execute();
                 
@@ -53,7 +218,7 @@ public class YouTubeApiService {
             
         } catch (IOException e) {
             log.error("Failed to get channel statistics for channelId: {}", channelId, e);
-            throw new AnalyticsException("Failed to get channel statistics", e);
+            throw new AnalyticsException(AnalyticsErrorCode.YOUTUBE_API_ERROR, "Failed to get channel statistics", e);
         }
     }
     
@@ -65,8 +230,8 @@ public class YouTubeApiService {
             YouTube youtube = getYouTubeClient();
             
             VideoListResponse response = youtube.videos()
-                .list(Arrays.asList("statistics"))
-                .setId(Arrays.asList(videoId))
+                .list(List.of("statistics"))
+                .setId(List.of(videoId))
                 .setKey(apiKey)
                 .execute();
                 
@@ -81,7 +246,7 @@ public class YouTubeApiService {
             
         } catch (IOException e) {
             log.error("Failed to get video statistics for videoId: {}", videoId, e);
-            throw new AnalyticsException("Failed to get video statistics", e);
+            throw new AnalyticsException(AnalyticsErrorCode.YOUTUBE_API_ERROR, "Failed to get video statistics", e);
         }
     }
     
